--- a/src/main/resources/assets/undergroundbiomes/lang/de_DE.lang
+++ b/src/main/resources/assets/undergroundbiomes/lang/de_DE.lang
@@ -99,3 +99,6 @@ item.fossilPiece.skull.name=Schädel
 
 itemGroup.undergroundBiomesBlocks=Underground Biomes Blöcken
 itemGroup.undergroundBiomesItems=Underground Biomes Items
+
+commands.oredictifystone.ok=Recipes successfully updated
+commands.oredictifystone.fail=Failed to update recipes, check console for details
